Updated discretization text

--- a/chms/Controls/Controls/index.html
+++ b/chms/Controls/Controls/index.html
@@ -14,10 +14,11 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
+    <script async="async" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex/" />
     <link rel="search" title="Search" href="../../search/" />
     <link rel="next" title="Mechanics Tutorials" href="../../Mechanics/Mechanics/" />
-    <link rel="prev" title="Matlab General Tutorials" href="../../Matlab/General/General/" />
+    <link rel="prev" title="Numerical Solutions of Differential Equations" href="../../Matlab/General/DifferentialEquationSolve/" />
 <link href="/images/siteimages/favicon.ico" rel="shortcut icon">
     <title>Center for Human-Machine Systems</title>
     <!-- Bootstrap -->
@@ -102,7 +103,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../../">Documentation overview</a><ul>
-      <li>Previous: <a href="../../Matlab/General/General/" title="previous chapter">Matlab General Tutorials</a></li>
+      <li>Previous: <a href="../../Matlab/General/DifferentialEquationSolve/" title="previous chapter">Numerical Solutions of Differential Equations</a></li>
       <li>Next: <a href="../../Mechanics/Mechanics/" title="next chapter">Mechanics Tutorials</a></li>
   </ul></li>
 </ul>
